--- a/templates/list_Manager/index.html.twig
+++ b/templates/list_Manager/index.html.twig
@@ -11,24 +11,68 @@
                         
                             {% for task in list.tasks %}
                             <p class="card-text">
-                                <input type="checkbox" {{ task.completed ? "checked" : ""}} onchange="window.location.href='/update-task-status/{{task.id}}'"> 
+                               {# <input type="checkbox" {{ task.completed ? "checked" : ""}} onchange="window.location.href='/update-task-status/{{task.id}}'"> #}
+                               <a href="/update-task-status/{{task.id}}" class="js-status">
+
+                            {% if task.completed %}
+                                
+                                <i class="fas fa-square"></i>
+
+                            {% else %}
+                                 
+                                <i class="far fa-square"></i>
+
+                            {% endif %}
+                               
+                               </a>
+
                                 {{task.title}}
-                                    <a href="/update-task/{{ task.id }}" ><svg xmlns="http://www.w3.org/2000/svg" fill="#ffc107" viewBox="0 0 24 24" width="15" height="15"><path fill-rule="evenodd" d="M17.263 2.177a1.75 1.75 0 012.474 0l2.586 2.586a1.75 1.75 0 010 2.474L19.53 10.03l-.012.013L8.69 20.378a1.75 1.75 0 01-.699.409l-5.523 1.68a.75.75 0 01-.935-.935l1.673-5.5a1.75 1.75 0 01.466-.756L14.476 4.963l2.787-2.786zm-2.275 4.371l-10.28 9.813a.25.25 0 00-.067.108l-1.264 4.154 4.177-1.271a.25.25 0 00.1-.059l10.273-9.806-2.94-2.939zM19 8.44l2.263-2.262a.25.25 0 000-.354l-2.586-2.586a.25.25 0 00-.354 0L16.061 5.5 19 8.44z"></path></svg></a>
-                                    <a href="/delete-task/{{ task.id }}"><svg xmlns="http://www.w3.org/2000/svg" fill="#d43934" viewBox="0 0 24 24" width="15" height="15"><path fill-rule="evenodd" d="M16 1.75V3h5.25a.75.75 0 010 1.5H2.75a.75.75 0 010-1.5H8V1.75C8 .784 8.784 0 9.75 0h4.5C15.216 0 16 .784 16 1.75zm-6.5 0a.25.25 0 01.25-.25h4.5a.25.25 0 01.25.25V3h-5V1.75z"></path><path d="M4.997 6.178a.75.75 0 10-1.493.144L4.916 20.92a1.75 1.75 0 001.742 1.58h10.684a1.75 1.75 0 001.742-1.581l1.413-14.597a.75.75 0 00-1.494-.144l-1.412 14.596a.25.25 0 01-.249.226H6.658a.25.25 0 01-.249-.226L4.997 6.178z"></path><path d="M9.206 7.501a.75.75 0 01.793.705l.5 8.5A.75.75 0 119 16.794l-.5-8.5a.75.75 0 01.705-.793zm6.293.793A.75.75 0 1014 8.206l-.5 8.5a.75.75 0 001.498.088l.5-8.5z"></path></svg></a>
+                                <a href="/update-task/{{ task.id }}" class="text-warning"><i class="fas fa-edit"></i></a>
+                                <a href="/delete-task/{{ task.id }}" class="text-danger"><i class="fas fa-trash"></i></a>
                             </p>
                                 {% endfor %}
 
-                                <center><a href="/create-task/{{ list.id }}"><svg xmlns="http://www.w3.org/2000/svg" fill="#08B11D" width="20" height="20" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
-    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-    </svg></a></center>
+                    <center>
+                        <a href="/create-task/{{ list.id }}" class="btn btn-success"><i class="fas fa-plus"></i></a>
+                    </center>
                     </p>
 
-                    <a href="/update-list/{{ list.id }}" class="btn btn-warning"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20"><path fill-rule="evenodd" d="M17.263 2.177a1.75 1.75 0 012.474 0l2.586 2.586a1.75 1.75 0 010 2.474L19.53 10.03l-.012.013L8.69 20.378a1.75 1.75 0 01-.699.409l-5.523 1.68a.75.75 0 01-.935-.935l1.673-5.5a1.75 1.75 0 01.466-.756L14.476 4.963l2.787-2.786zm-2.275 4.371l-10.28 9.813a.25.25 0 00-.067.108l-1.264 4.154 4.177-1.271a.25.25 0 00.1-.059l10.273-9.806-2.94-2.939zM19 8.44l2.263-2.262a.25.25 0 000-.354l-2.586-2.586a.25.25 0 00-.354 0L16.061 5.5 19 8.44z"></path></svg></a>
-                    <a href="/delete-list/{{ list.id }}" class="btn btn-danger"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20"><path fill-rule="evenodd" d="M16 1.75V3h5.25a.75.75 0 010 1.5H2.75a.75.75 0 010-1.5H8V1.75C8 .784 8.784 0 9.75 0h4.5C15.216 0 16 .784 16 1.75zm-6.5 0a.25.25 0 01.25-.25h4.5a.25.25 0 01.25.25V3h-5V1.75z"></path><path d="M4.997 6.178a.75.75 0 10-1.493.144L4.916 20.92a1.75 1.75 0 001.742 1.58h10.684a1.75 1.75 0 001.742-1.581l1.413-14.597a.75.75 0 00-1.494-.144l-1.412 14.596a.25.25 0 01-.249.226H6.658a.25.25 0 01-.249-.226L4.997 6.178z"></path><path d="M9.206 7.501a.75.75 0 01.793.705l.5 8.5A.75.75 0 119 16.794l-.5-8.5a.75.75 0 01.705-.793zm6.293.793A.75.75 0 1014 8.206l-.5 8.5a.75.75 0 001.498.088l.5-8.5z"></path></svg></a>
+                    <a href="/update-list/{{ list.id }}" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                    <a href="/delete-list/{{ list.id }}" class="btn btn-danger"><i class="fas fa-trash"></i></a>
                 </div>
             </div>
         {% endfor %}
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <script>
+        window.addEventListener("load", event => {
+            document.querySelectorAll("a.js-status").forEach(link => {
+                link.addEventListener("click", updateStatus);
+            });
+        });
+
+    function updateStatus(event ){
+        event.preventDefault();
+
+        const checkIcon = this.querySelector("i.fa-square");
+
+        axios.post(this.href).then(response => {
+            if(checkIcon.classList.contains("fas")) {
+                checkIcon.classList.replace("fas", "far");
+            }
+            else {
+                checkIcon.classList.replace("far", "fas");
+            }
+        }).catch(error => {
+            console.error(error);
+            window.alert("Une erreur est survenue");
+        });
+    }
+    
+    </script>
 {% endblock %}
 
