--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,19 +16,19 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Mes penses-bête</a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
+    <a class="navbar-brand" style="margin-left:20px !important;" href="/">Mes pense-bête</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" >
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="/">Accueil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/create-list">Créer une nouvelle liste</a>
+                <a class="nav-link" href="/create-list">Nouvelle liste</a>
             </li>
         </ul>
     </div>
