--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
-    <a class="navbar-brand" style="margin-left:20px !important;" href="/">Mes pense-bête</a>
+    <a class="navbar-brand" style="margin-left:20px !important;">Mes pense-bête</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="/">Accueil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/create-list">Nouvelle liste</a>
+                <a class="nav-link" href="/create-list">Créer une liste</a>
             </li>
         </ul>
     </div>
