--- a/templates/list_Manager/index.html.twig
+++ b/templates/list_Manager/index.html.twig
@@ -9,8 +9,8 @@
 
 
 					<h5 class="card-title" style="color: {{ list.color }}; text-align:center;">{{ list.name }}</h5>
-<hr>
-					<a href="/create-task/{{ list.id }}" class="text-success">
+					<hr>
+					<a href="/create-task/{{ list.id }}" style="color: {{ list.color }};">
 						<i class="fas fa-plus">
 							Ajouter une tâche</i>
 					</a><br>
@@ -19,8 +19,7 @@
 					{% for task in list.tasks %}
 						<p
 							class="card-text">
-							{# <input type="checkbox" {{ task.completed ? "checked" : ""}} onchange="window.location.href='/update-task-status/{{task.id}}'"> #}
-							<a style="text-decoration:none" href="/update-task-status/{{task.id}}" class="js-status">
+							<a style="text-decoration:none; color: {{ list.color }};" href="/update-task-status/{{task.id}}" class="js-status">
 
 								{% if task.completed %}
 
@@ -35,10 +34,10 @@
 							</a>
 
 							{{task.title}}
-							<a href="/update-task/{{ task.id }}" class="text-warning">
+							<a href="/update-task/{{ task.id }}" style="text-decoration:none; color: {{ list.color }};">
 								<i class="fas fa-edit"></i>
 							</a>
-							<a href="/delete-task/{{ task.id }}" class="text-danger">
+							<a href="/delete-task/{{ task.id }}" style="text-decoration:none; color: {{ list.color }};">
 								<i class="fas fa-trash"></i>
 							</a>
 						</p>
@@ -47,14 +46,15 @@
 
 				</p>
 			</div>
+            
 			<blockquote class="blockquote mb-2">
 
 				<center>
-					<a href="/update-list/{{ list.id }}" class="btn btn-warning">
-						<i class="fas fa-edit"></i>
+					<a href="/update-list/{{ list.id }}" class="btn btn-outline-warning">
+						Modifier
 					</a>
-					<a href="/delete-list/{{ list.id }}" class="btn btn-danger">
-						<i class="fas fa-trash"></i>
+					<a href="/delete-list/{{ list.id }}" class="btn btn-outline-danger">
+						Supprimer
 					</a>
 				</center>
 			</blockquote>
@@ -62,6 +62,7 @@
 
 	{% endfor %}
 </div>{% endblock %}{% block javascripts %}
+
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 <script>
@@ -88,3 +89,4 @@ window.alert("Une erreur est survenue");
 });
 }
 </script>{% endblock %}
+
