--- a/templates/list_Manager/create.html.twig
+++ b/templates/list_Manager/create.html.twig
@@ -4,7 +4,7 @@
 <div class="container">
 
         {% if app.request.get("_route") == "create_list" %}<br>
-       <h3>Créer une nouvelle liste</h3>
+       <h3>Créer une nouvelle liste</h3><br>
         {% else %}<br>
         <h3>Modifier la liste <span style="color:{{ list.color }}">{{ list.name }}</span></h3>
         {% endif %}
@@ -12,7 +12,7 @@
     {{ form_start(form) }}
         {{ form_row(form.name) }}
         {{ form_row(form.color) }}
-        {% if app.request.get("_route") == "create_list" %}
+        {% if app.request.get("_route") == "create_list" %}<br>
         <input type="submit" value="Créer" class="btn btn-success mt-2">
         {% else %}
         <input type="submit" value="Modifier" class="btn btn-warning mt-2">
