test compteur, ajout message success

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Gestion de listes de tâches STUDI
+			{% block title %}Mes pense-bête STUDI
 			{% endblock %}
 		</title>
 		<link
@@ -40,6 +40,8 @@
 				</ul>
 			</div>
 		</nav>
-		{% block body %}{% endblock %}
+		{% block body %}
+
+		{% endblock %}
 	</body>
 </html>
