--- a/templates/list_Manager/index.html.twig
+++ b/templates/list_Manager/index.html.twig
@@ -89,9 +89,9 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 <script>
-	window.addEventListener("load", event => {
+window.addEventListener("load", event => {
 document.querySelectorAll("a.js-status").forEach(link => {
-link.addEventListener("click", updateStatus);
+link.addEventListener("click", ##updateStatus);
 });
 });
 
