--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,8 +40,22 @@
 				</ul>
 			</div>
 		</nav>
+		
 		{% block body %}
 
 		{% endblock %}
+
+		
 	</body>
+
+	<!-- FOOTER -->
+      <footer style="position: absolute; 
+    bottom: 0;
+    height: 25px;
+    background: #212529;
+    color: #FFFFFF;
+	width:100%;">
+        <p style="text-align:center;">&copy; 2022 SCHAER Marie</p>
+      </footer>
+
 </html>
